--- a/playground/templates/playground/post_list.html
+++ b/playground/templates/playground/post_list.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Django girls blog</title>
-    </head>
-    <body>
-        <header>
-            <h1><a href="/">Django girls blog</a></h1>
-        </header>
 
-        <article>
-            <time>publisched :27.06.2022,13:00</time>
-            <h2><a href=""> My first post </a></h2>
-            <p>hjgdhjdgfjhghbfhj kjhfekjfhegliheasjkahd akjk fukg sughfg </p>
-        </article>
+<header>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</header>
 
-        <article>
-            <time>
-                publisched  :  27.06.2022 , um 13:15
-            </time>
-            <h2><a href =" "> My second post</a></h2>
-            <p> Bonjour tous le monde, herzlich wilkommen ihr lieben und danke sehr,dass ihr alle da sind </p>
-        </article>
-    </body>
-</html>
+{% for post in posts %}
+    <article>
+        <time>published: {{ post.published_date }}</time>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </article>
+{% endfor %}
